Bug 98838 - [IGT][BYT] pm_rpm --debufgs-read [drm:intel_runtime_suspend [i915]] Device suspended [52212.337010] BUG: unable to handle kernel NULL pointer dereference at 0000000000000168 [52212.337165] IP: [<ffffffffa00ec366>] i915_hws_info+0x36/0x90 [i915] [52212.33
Summary: [IGT][BYT] pm_rpm --debufgs-read [drm:intel_runtime_suspend [i915]] Device s...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Elio
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-23 23:19 UTC by Elio
Modified: 2017-07-24 22:39 UTC (History)
1 user (show)

See Also:
i915 platform: BYT
i915 features: power/runtime PM


Attachments

Description Elio 2016-11-23 23:19:40 UTC
The following test case is failing with IGT:

./pm_rpm --run-subtest debugfs-read

Configuration:


Platform BYT: Acer Aspire XC-603
CPU: Intel(R) Pentium(R) CPU  J2900  @ 2.41GHz (family 6, model 55, stepping 8)
Motherboard: Aspire XC-603
GPU: Intel® HD Graphics - Intel Corporation Atom Processor Z36xxx/Z37xxx Series Graphics & Display (rev 0e)

Software
Bios: P11-B2
Linux distribution: Ubuntu 16.04 64 bits

Kernel: 4.9.0-rc4 91e164f branch drm-intel-nightly from http://cgit.freedesktop.org/drm-intel/ 
  commit 91e164fea17d3e5366048b6eae3c6eea4e14e9fe
  Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
  Date:   Mon Nov 14 16:31:06 2016 +0200
  drm-intel-nightly: 2016y-11m-14d-14h-30m-30s UTC integration manifest

libdrm-2.4.71-13 670f1e4 from git://anongit.freedesktop.org/mesa/drm
mesa: mesa-13.0.0 df1b0a5 from git://anongit.freedesktop.org/mesa/mesa
cairo 1.15.2 db8a7f1 from git://anongit.freedesktop.org/cairo
xorg-server-1.18.99.902-2 7513da4 from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel 2.99.917-731 d1d14f2 from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
libva-1.7.2-40 3a7547b from git://git.freedesktop.org/git/vaapi/libva 
vaapi-intel-driver: 1.7.2-157 55a538c from git://git.freedesktop.org/git/vaapi/intel-driver
intel-gpu-tools-1.16-132 773ac7c from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git

External screen: DELL U2312HM (VGA)

Error:
[52209.628378] [IGT] pm_rpm: executing
[52209.644972] [drm:drm_mode_addfb2] [FB:52]
[52210.682074] [IGT] pm_rpm: starting subtest debugfs-read
[52210.682172] [drm:drm_mode_setcrtc] [CRTC:33:pipe A]
[52210.682259] [drm:intel_atomic_check [i915]] New cdclk calculated to be atomic 200000, actual 200000
[52210.682325] [drm:intel_set_memory_cxsr [i915]] memory self-refresh is disabled
[52210.694125] [drm:intel_disable_pipe [i915]] disabling pipe A
[52210.710629] [drm:vlv_pipe_set_fifo_size.isra.25 [i915]] Pipe A FIFO split 511 / 511 / 511
[52210.710684] [drm:vlv_update_wm [i915]] Setting FIFO watermarks - A: plane=0, cursor=0, sprite0=0, sprite1=0, SR: plane=0, cursor=0 level=0 cxsr=0
[52210.713131] [drm:intel_update_cdclk [i915]] Current CD clock rate: 200000 kHz
[52210.713192] [drm:intel_atomic_commit_tail [i915]] [ENCODER:44:CRT]
[52210.713251] [drm:intel_atomic_commit_tail [i915]] [ENCODER:45:DP B]
[52210.713314] [drm:intel_atomic_commit_tail [i915]] [ENCODER:49:HDMI B]
[52210.713370] [drm:verify_connector_state.isra.82 [i915]] [CONNECTOR:43:VGA-1]
[52210.713435] [drm:intel_power_well_disable [i915]] disabling dpio-common
[52210.715853] [drm:intel_power_well_disable [i915]] disabling display
[52210.717982] [drm:intel_atomic_commit_tail [i915]] [CRTC:33:pipe A]
[52210.718038] [drm:intel_power_well_disable [i915]] disabling always-on
[52210.718087] [drm:drm_mode_setcrtc] [CRTC:42:pipe B]
[52210.718213] [drm:intel_runtime_suspend [i915]] Suspending device
[52210.720779] [drm:intel_runtime_suspend [i915]] Device suspended
[52210.837118] [drm:intel_runtime_resume [i915]] Resuming device
[52210.839640] [drm:intel_runtime_resume [i915]] Device resumed
[52210.839762] [drm:intel_runtime_suspend [i915]] Suspending device
[52210.839816] [drm:vlv_suspend_complete [i915]] waiting for GT wells to go off (000000a1)
[52210.846123] [drm:intel_runtime_suspend [i915]] Device suspended
[52210.957135] [drm:intel_runtime_resume [i915]] Resuming device
[52210.959660] [drm:intel_runtime_resume [i915]] Device resumed
[52210.959785] [drm:intel_runtime_suspend [i915]] Suspending device
[52210.959840] [drm:vlv_suspend_complete [i915]] waiting for GT wells to go off (000000a1)
[52210.966218] [drm:intel_runtime_suspend [i915]] Device suspended
[52211.077203] [drm:intel_runtime_resume [i915]] Resuming device
[52211.079715] [drm:intel_runtime_resume [i915]] Device resumed
[52211.079894] [drm:intel_runtime_suspend [i915]] Suspending device
[52211.079949] [drm:vlv_suspend_complete [i915]] waiting for GT wells to go off (000000a1)
[52211.086245] [drm:intel_runtime_suspend [i915]] Device suspended
[52211.197275] [drm:intel_runtime_resume [i915]] Resuming device
[52211.199786] [drm:intel_runtime_resume [i915]] Device resumed
[52211.199987] [drm:intel_runtime_suspend [i915]] Suspending device
[52211.200041] [drm:vlv_suspend_complete [i915]] waiting for GT wells to go off (000000a1)
[52211.206374] [drm:intel_runtime_suspend [i915]] Device suspended
[52211.317318] [drm:intel_runtime_resume [i915]] Resuming device
[52211.319826] [drm:intel_runtime_resume [i915]] Device resumed
[52211.319944] [drm:intel_runtime_suspend [i915]] Suspending device
[52211.319998] [drm:vlv_suspend_complete [i915]] waiting for GT wells to go off (000000a1)
[52211.326343] [drm:intel_runtime_suspend [i915]] Device suspended
[52211.437361] [drm:intel_runtime_resume [i915]] Resuming device
[52211.439883] [drm:intel_runtime_resume [i915]] Device resumed
[52211.440010] [drm:intel_runtime_suspend [i915]] Suspending device
[52211.440064] [drm:vlv_suspend_complete [i915]] waiting for GT wells to go off (000000a1)
[52211.446412] [drm:intel_runtime_suspend [i915]] Device suspended
[52211.557408] [drm:intel_runtime_resume [i915]] Resuming device
[52211.559917] [drm:intel_runtime_resume [i915]] Device resumed
[52211.562924] [drm:intel_runtime_suspend [i915]] Suspending device
[52211.563023] [drm:intel_runtime_suspend [i915]] Device suspended
[52211.601411] [drm:intel_runtime_resume [i915]] Resuming device
[52211.603833] [drm:vlv_check_no_gt_access [i915]] GT register access while GT waking disabled
[52211.603967] [drm:intel_runtime_resume [i915]] Device resumed
[52211.607014] [drm:intel_runtime_suspend [i915]] Suspending device
[52211.607109] [drm:intel_runtime_suspend [i915]] Device suspended
[52211.725490] [drm:intel_runtime_resume [i915]] Resuming device
[52211.727916] [drm:vlv_check_no_gt_access [i915]] GT register access while GT waking disabled
[52211.728050] [drm:intel_runtime_resume [i915]] Device resumed
[52211.728129] [drm:intel_runtime_suspend [i915]] Suspending device
[52211.728183] [drm:vlv_suspend_complete [i915]] waiting for GT wells to go off (000000a1)
[52211.734201] [drm:intel_runtime_suspend [i915]] Device suspended
[52211.849516] [drm:intel_runtime_resume [i915]] Resuming device
[52211.852028] [drm:intel_runtime_resume [i915]] Device resumed
[52211.852083] [drm:intel_power_well_enable [i915]] enabling always-on
[52211.852131] [drm:intel_power_well_enable [i915]] enabling display
[52211.853690] [drm:intel_crt_reset [i915]] crt adpa set to 0xf40000
[52211.853747] [drm:i915_redisable_vga_power_on [i915]] Something enabled VGA plane, disabling it
[52211.854107] [drm:intel_power_well_enable [i915]] enabling dpio-tx-b-01
[52211.854174] [drm:intel_crt_detect [i915]] [CONNECTOR:43:VGA-1] force=0
[52211.856588] [drm:intel_power_well_enable [i915]] enabling dpio-tx-b-23
[52211.859042] [drm:intel_power_well_enable [i915]] enabling dpio-tx-c-01
[52211.861649] [drm:intel_power_well_enable [i915]] enabling dpio-tx-c-23
[52211.864038] [drm:intel_power_well_enable [i915]] enabling dpio-common
[52211.865680] [drm:intel_crt_detect [i915]] trigger hotplug detect cycle: adpa=0xf40000
[52211.865744] [drm:intel_power_well_disable [i915]] disabling dpio-tx-c-23
[52211.868079] [drm:intel_power_well_disable [i915]] disabling dpio-tx-c-01
[52211.869699] [drm:intel_power_well_disable [i915]] disabling dpio-tx-b-23
[52211.871280] [drm:intel_get_hpd_pins [i915]] hotplug event received, stat 0x00000800, dig 0x00000800, pins 0x00000002
[52211.871717] [drm:intel_crt_detect [i915]] valleyview hotplug adpa=0x3f40000, result 1
[52211.871770] [drm:intel_crt_detect [i915]] CRT detected via hotplug
[52211.871833] [drm:intel_power_well_disable [i915]] disabling dpio-tx-b-01
[52211.873727] [drm:intel_power_well_disable [i915]] disabling dpio-common
[52211.876121] [drm:intel_power_well_disable [i915]] disabling display
[52211.877668] [drm:intel_power_well_disable [i915]] disabling always-on
[52211.877684] [drm:drm_helper_hpd_irq_event] [CONNECTOR:43:VGA-1] status updated from connected to connected
[52211.877738] [drm:intel_dp_detect [i915]] [CONNECTOR:46:DP-1]
[52211.877795] [drm:intel_power_well_enable [i915]] enabling always-on
[52211.877843] [drm:intel_power_well_enable [i915]] enabling display
[52211.880284] [drm:intel_crt_reset [i915]] crt adpa set to 0xf40000
[52211.880340] [drm:i915_redisable_vga_power_on [i915]] Something enabled VGA plane, disabling it
[52211.880693] [drm:intel_power_well_enable [i915]] enabling dpio-tx-b-01
[52211.883130] [drm:intel_power_well_enable [i915]] enabling dpio-tx-b-23
[52211.885656] [drm:intel_power_well_enable [i915]] enabling dpio-tx-c-01
[52211.888041] [drm:intel_power_well_enable [i915]] enabling dpio-tx-c-23
[52211.889678] [drm:intel_power_well_enable [i915]] enabling dpio-common
[52211.892100] [drm:intel_power_well_disable [i915]] disabling dpio-common
[52211.893659] [drm:intel_power_well_disable [i915]] disabling dpio-tx-c-23
[52211.896043] [drm:intel_power_well_disable [i915]] disabling dpio-tx-c-01
[52211.897684] [drm:intel_power_well_disable [i915]] disabling dpio-tx-b-23
[52211.900069] [drm:intel_power_well_disable [i915]] disabling dpio-tx-b-01
[52211.901673] [drm:intel_power_well_disable [i915]] disabling display
[52211.904101] [drm:intel_power_well_disable [i915]] disabling always-on
[52211.904118] [drm:drm_helper_hpd_irq_event] [CONNECTOR:46:DP-1] status updated from disconnected to disconnected
[52211.904172] [drm:intel_hdmi_detect [i915]] [CONNECTOR:50:HDMI-A-1]
[52211.904221] [drm:intel_power_well_enable [i915]] enabling always-on
[52211.904268] [drm:intel_power_well_enable [i915]] enabling display
[52211.905722] [drm:intel_crt_reset [i915]] crt adpa set to 0xf40000
[52211.905780] [drm:i915_redisable_vga_power_on [i915]] Something enabled VGA plane, disabling it
[52211.906479] [drm:gmbus_xfer [i915]] GMBUS [i915 gmbus dpb] NAK for addr: 0050 w(1)
[52211.906533] [drm:gmbus_xfer [i915]] GMBUS [i915 gmbus dpb] NAK on first message, retry
[52211.906879] [drm:gmbus_xfer [i915]] GMBUS [i915 gmbus dpb] NAK for addr: 0050 w(1)
[52211.906892] [drm:drm_do_probe_ddc_edid] drm: skipping non-existent adapter i915 gmbus dpb
[52211.907255] [drm:gmbus_xfer [i915]] GMBUS [i915 gmbus dpb] NAK for addr: 0040 w(1)
[52211.907309] [drm:gmbus_xfer [i915]] GMBUS [i915 gmbus dpb] NAK on first message, retry
[52211.907664] [drm:gmbus_xfer [i915]] GMBUS [i915 gmbus dpb] NAK for addr: 0040 w(1)
[52211.907678] [drm:drm_dp_dual_mode_detect] DP dual mode HDMI ID:  (err -6)
[52211.907727] [drm:intel_power_well_disable [i915]] disabling display
[52211.909806] [drm:intel_power_well_disable [i915]] disabling always-on
[52211.909829] [drm:drm_helper_hpd_irq_event] [CONNECTOR:50:HDMI-A-1] status updated from disconnected to disconnected
[52211.909882] [drm:intel_runtime_suspend [i915]] Suspending device
[52211.912331] [drm:intel_runtime_suspend [i915]] Device suspended
[52211.993592] [drm:intel_runtime_resume [i915]] Resuming device
[52211.996116] [drm:intel_runtime_resume [i915]] Device resumed
[52211.996190] [drm:fwtable_read32 [i915]] RPM wakelock ref not held during HW access
[52211.996246] [drm:fwtable_read32 [i915]] RPM wakelock ref not held during HW access
[52211.996350] [drm:intel_runtime_suspend [i915]] Suspending device
[52211.996404] [drm:vlv_suspend_complete [i915]] waiting for GT wells to go off (000000a1)
[52212.001087] [drm:intel_runtime_suspend [i915]] Device suspended
[52212.113689] [drm:intel_runtime_resume [i915]] Resuming device
[52212.116198] [drm:intel_runtime_resume [i915]] Device resumed
[52212.116355] [drm:intel_runtime_suspend [i915]] Suspending device
[52212.116409] [drm:vlv_suspend_complete [i915]] waiting for GT wells to go off (000000a1)
[52212.121105] [drm:intel_runtime_suspend [i915]] Device suspended
[52212.233652] [drm:intel_runtime_resume [i915]] Resuming device
[52212.236175] [drm:intel_runtime_resume [i915]] Device resumed
[52212.236308] [drm:intel_runtime_suspend [i915]] Suspending device
[52212.236363] [drm:vlv_suspend_complete [i915]] waiting for GT wells to go off (000000a1)
[52212.242341] [drm:intel_runtime_suspend [i915]] Device suspended
[52212.337010] BUG: unable to handle kernel NULL pointer dereference at 0000000000000168
[52212.337165] IP: [<ffffffffa00ec366>] i915_hws_info+0x36/0x90 [i915]
[52212.337325] PGD 1599cc067
[52212.337369] PUD 157a15067
[52212.337418] PMD 0

[52212.337464] Oops: 0000 [#1] SMP
[52212.337516] Modules linked in: vgem nls_iso8859_1 intel_rapl intel_soc_dts_iosf coretemp kvm_intel snd_hda_codec_hdmi kvm snd_intel_sst_acpi snd_hda_codec_realtek snd_intel_sst_core snd_hda_codec_generic sparse_keymap snd_soc_sst_mfld_platform snd_soc_sst_match snd_soc_core irqbypass snd_hda_intel snd_hda_codec snd_hda_core snd_compress snd_pcm_dmaengine crct10dif_pclmul snd_hwdep snd_pcm crc32_pclmul snd_seq_midi snd_seq_midi_event ghash_clmulni_intel snd_rawmidi cryptd snd_seq snd_seq_device snd_timer mei_txe serio_raw mei shpchp snd lpc_ich soundcore mac_hid parport_pc ppdev lp parport autofs4 uas usb_storage i915 r8169 mii psmouse xhci_pci xhci_hcd ahci libahci wmi video [last unloaded: vgem]
[52212.355485] CPU: 3 PID: 26623 Comm: pm_rpm Tainted: G     U          4.9.0-rc6-nightly+ #2
[52212.364343] Hardware name: Acer Aspire XC-603/Aspire XC-603, BIOS P11-B2 08/28/2014
[52212.373178] task: ffff880152d9d400 task.stack: ffffc90002e20000
[52212.381968] RIP: 0010:[<ffffffffa00ec366>]  [<ffffffffa00ec366>] i915_hws_info+0x36/0x90 [i915]
[52212.390798] RSP: 0018:ffffc90002e23d60  EFLAGS: 00010286
[52212.399529] RAX: 0000000000000000 RBX: 0000000000000000 RCX: 00000000006826c6
[52212.408244] RDX: ffff880152488000 RSI: 0000000000000001 RDI: ffff880155d70780
[52212.416876] RBP: ffffc90002e23d80 R08: 000000000001c7c0 R09: 0000000000000000
[52212.425442] R10: ffff88015b002f00 R11: ffff880152d9d400 R12: ffff880157624700
[52212.433946] R13: ffff880155d70780 R14: ffffc90002e23ef8 R15: ffff880155d70780
[52212.442374] FS:  00007f49b64988c0(0000) GS:ffff88015fd80000(0000) knlGS:0000000000000000
[52212.450789] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[52212.459139] CR2: 0000000000000168 CR3: 00000001522f4000 CR4: 00000000001006e0
[52212.467457] Stack:
[52212.475665]  ffff880155d70780 0000000000000000 ffff880157624700 0000000000000001
[52212.483928]  ffffc90002e23de8 ffffffff8122faa3 ffffc90002e23ed4 00007fff42001980
[52212.492138]  ffff880155d707c0 0000000000000080 0000000000000000 ffffffff8121af32
[52212.500293] Call Trace:
[52212.508332]  [<ffffffff8122faa3>] seq_read+0xe3/0x360
[52212.516338]  [<ffffffff8121af32>] ? do_filp_open+0x92/0xd0
[52212.524279]  [<ffffffff81312691>] full_proxy_read+0x51/0x80
[52212.532130]  [<ffffffff8120a018>] __vfs_read+0x28/0x110
[52212.539897]  [<ffffffff81330b7d>] ? security_file_permission+0x9d/0xc0
[52212.547609]  [<ffffffff8120a6c9>] ? rw_verify_area+0x49/0xb0
[52212.555264]  [<ffffffff8120a7bc>] vfs_read+0x8c/0x130
[52212.562811]  [<ffffffff8120bba6>] SyS_read+0x46/0xa0
[52212.570254]  [<ffffffff8100391e>] do_syscall_64+0x6e/0x180
[52212.577638]  [<ffffffff81800b6f>] entry_SYSCALL64_slow_path+0x25/0x25
[52212.584960] Code: 49 89 fd 41 54 53 31 db 48 83 ec 08 48 8b 87 80 00 00 00 48 8b 50 10 48 8b 40 18 48 8b 52 10 48 8b 40 18 48 8b 84 c2 c8 29 00 00 <4c> 8b a0 68 01 00 00 4d 85 e4 74 36 41 8b 44 1c 0c 45 8b 4c 1c
[52212.592909] RIP  [<ffffffffa00ec366>] i915_hws_info+0x36/0x90 [i915]
[52212.600494]  RSP <ffffc90002e23d60>
[52212.607928] CR2: 0000000000000168
[52212.655638] ---[ end trace ef3f0f21a571cfa8 ]---
[52212.656821] [drm:intel_atomic_check [i915]] [CONNECTOR:43:VGA-1] checking for sink bpp constrains
[52212.656855] [drm:intel_atomic_check [i915]] clamping display bpp (was 30) to default limit of 24
[52212.656885] [drm:intel_atomic_check [i915]] hw max bpp: 30, pipe bpp: 24, dithering: 0
[52212.656917] [drm:intel_dump_pipe_config [i915]] [CRTC:33:pipe A][modeset]
[52212.656945] [drm:intel_dump_pipe_config [i915]] cpu_transcoder: A, pipe bpp: 24, dithering: 0
[52212.656976] [drm:intel_dump_pipe_config [i915]] audio: 0, infoframes: 0
[52212.657004] [drm:intel_dump_pipe_config [i915]] requested mode:
[52212.657015] [drm:drm_mode_debug_printmodeline] Modeline 0:"1920x1080" 60 148500 1920 2008 2052 2200 1080 1084 1089 1125 0x48 0x5
[52212.657042] [drm:intel_dump_pipe_config [i915]] adjusted mode:
[52212.657047] [drm:drm_mode_debug_printmodeline] Modeline 0:"1920x1080" 60 148500 1920 2008 2052 2200 1080 1084 1089 1125 0x48 0x5
[52212.657079] [drm:intel_dump_pipe_config [i915]] crtc timings: 148500 1920 2008 2052 2200 1080 1084 1089 1125, type: 0x48 flags: 0x5
[52212.657107] [drm:intel_dump_pipe_config [i915]] port clock: 148500, pipe src size: 1920x1080
[52212.657138] [drm:intel_dump_pipe_config [i915]] gmch pfit: control: 0x00000000, ratios: 0x00000000, lvds border: 0x00000000
[52212.657166] [drm:intel_dump_pipe_config [i915]] ips: 0, double wide: 0
[52212.657194] [drm:intel_dump_pipe_config [i915]] dpll_hw_state: dpll: 0xf0002000, dpll_md: 0x0, fp0: 0x0, fp1: 0x0
[52212.657225] [drm:intel_dump_pipe_config [i915]] planes on this crtc
[52212.657253] [drm:intel_dump_pipe_config [i915]] [PLANE:25:primary A] disabled, scaler_id = 0
[52212.657282] [drm:intel_dump_pipe_config [i915]] [PLANE:27:sprite A] disabled, scaler_id = 0
[52212.657313] [drm:intel_dump_pipe_config [i915]] [PLANE:29:sprite B] disabled, scaler_id = 0
[52212.657341] [drm:intel_dump_pipe_config [i915]] [PLANE:31:cursor A] disabled, scaler_id = 0
[52212.657371] [drm:intel_atomic_check [i915]] New cdclk calculated to be atomic 266667, actual 266667
[52212.677668] [drm:intel_runtime_resume [i915]] Resuming device
[52212.679988] [drm:intel_runtime_resume [i915]] Device resumed
[52212.680068] [drm:intel_power_well_enable [i915]] enabling always-on
[52212.680109] [drm:intel_power_well_enable [i915]] enabling display
[52212.681784] [drm:intel_crt_reset [i915]] crt adpa set to 0xf40000
[52212.681829] [drm:i915_redisable_vga_power_on [i915]] Something enabled VGA plane, disabling it
[52212.682181] [drm:intel_power_well_enable [i915]] enabling dpio-common
[52212.685761] [drm:intel_update_cdclk [i915]] Current CD clock rate: 266667 kHz
[52212.685819] [drm:intel_atomic_commit_tail [i915]] [ENCODER:44:CRT]
[52212.685863] [drm:intel_atomic_commit_tail [i915]] [ENCODER:45:DP B]
[52212.685908] [drm:intel_atomic_commit_tail [i915]] [ENCODER:49:HDMI B]
[52212.686183] [drm:vlv_pipe_set_fifo_size.isra.25 [i915]] Pipe A FIFO split 511 / 511 / 511
[52212.686226] [drm:vlv_update_wm [i915]] Setting FIFO watermarks - A: plane=391, cursor=63, sprite0=0, sprite1=0, SR: plane=0, cursor=0 level=0 cxsr=0
[52212.686269] [drm:intel_enable_pipe [i915]] enabling pipe A
[52212.703192] [drm:verify_connector_state.isra.82 [i915]] [CONNECTOR:43:VGA-1]
[52212.703265] [drm:intel_atomic_commit_tail [i915]] [CRTC:33:pipe A]
[52212.703392] [drm:intel_crt_detect [i915]] [CONNECTOR:43:VGA-1] force=0
[52212.703455] [drm:intel_crt_detect [i915]] trigger hotplug detect cycle: adpa=0x80f40018
[52212.720373] [drm:intel_get_hpd_pins [i915]] hotplug event received, stat 0x00000800, dig 0x00000800, pins 0x00000002
[52212.720690] [drm:intel_crt_detect [i915]] valleyview hotplug adpa=0x83f40018, result 1
[52212.720747] [drm:intel_crt_detect [i915]] CRT detected via hotplug
[52212.720768] [drm:drm_helper_hpd_irq_event] [CONNECTOR:43:VGA-1] status updated from connected to connected
[52212.720824] [drm:intel_dp_detect [i915]] [CONNECTOR:46:DP-1]
[52212.720877] [drm:intel_power_well_enable [i915]] enabling dpio-tx-b-01
[52212.722189] [drm:intel_power_well_enable [i915]] enabling dpio-tx-b-23
[52212.724576] [drm:intel_power_well_enable [i915]] enabling dpio-tx-c-01
[52212.726009] [drm:intel_power_well_enable [i915]] enabling dpio-tx-c-23
[52212.728403] [drm:intel_power_well_disable [i915]] disabling dpio-tx-c-23
[52212.730260] [drm:intel_power_well_disable [i915]] disabling dpio-tx-c-01
[52212.732696] [drm:intel_power_well_disable [i915]] disabling dpio-tx-b-23
[52212.735229] [drm:intel_power_well_disable [i915]] disabling dpio-tx-b-01
[52212.737819] [drm:drm_helper_hpd_irq_event] [CONNECTOR:46:DP-1] status updated from disconnected to disconnected
[52212.737886] [drm:intel_hdmi_detect [i915]] [CONNECTOR:50:HDMI-A-1]
[52212.738158] [drm:gmbus_xfer [i915]] GMBUS [i915 gmbus dpb] NAK for addr: 0050 w(1)
[52212.738214] [drm:gmbus_xfer [i915]] GMBUS [i915 gmbus dpb] NAK on first message, retry
[52212.738626] [drm:gmbus_xfer [i915]] GMBUS [i915 gmbus dpb] NAK for addr: 0050 w(1)
[52212.738637] [drm:drm_do_probe_ddc_edid] drm: skipping non-existent adapter i915 gmbus dpb
[52212.738870] [drm:gmbus_xfer [i915]] GMBUS [i915 gmbus dpb] NAK for addr: 0040 w(1)
[52212.738926] [drm:gmbus_xfer [i915]] GMBUS [i915 gmbus dpb] NAK on first message, retry
[52212.739254] [drm:gmbus_xfer [i915]] GMBUS [i915 gmbus dpb] NAK for addr: 0040 w(1)
[52212.739268] [drm:drm_dp_dual_mode_detect] DP dual mode HDMI ID:  (err -6)
[52212.739278] [drm:drm_helper_hpd_irq_event] [CONNECTOR:50:HDMI-A-1] status updated from disconnected to disconnected
Comment 1 Chris Wilson 2016-11-24 11:13:47 UTC
commit 30576a2c462d9658508c3de67601aa565f973064
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Nov 24 09:34:01 2016 +0000

    drm/i915/debugfs: Drop i915_hws_info
    
    i915_hws_info() has not been kept upto date (missing new engines) and so
    I consider it to be unused. HWS is included in the error state, which
    would be an avenue to retrieving it if required in future (possibly via
    i915_engine_info). As it is currently oopsing with an rpm testcase, just
    remove it.
Comment 2 yann 2016-11-24 13:15:27 UTC
(In reply to Chris Wilson from comment #1)
> commit 30576a2c462d9658508c3de67601aa565f973064
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Thu Nov 24 09:34:01 2016 +0000
> 
>     drm/i915/debugfs: Drop i915_hws_info
>     
>     i915_hws_info() has not been kept upto date (missing new engines) and so
>     I consider it to be unused. HWS is included in the error state, which
>     would be an avenue to retrieving it if required in future (possibly via
>     i915_engine_info). As it is currently oopsing with an rpm testcase, just
>     remove it.

Elio, please re-test and confirm status.
Thanks


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.